--- a/index.html
+++ b/index.html
@@ -11,17 +11,21 @@
 <body>
 
     <h1>Your Trusty TODO List</h1>
+    
     <div>
         <div class='container'>
             <input type = 'text' class = 'input-list' placeholder = 'What do you want to do?'>
+            <button id='submit-todo' type="button">Enter</button>
+            <div class = 'options'>
             <div class='home'>Home</div>
             <div class='search'>Search</div>
             <div class='logout'>Logout</div>
         </div>
+        </div>
 
 
 
-
+<script src = 'index.js'></script>
 </body>
 <footer>
 </footer>
