--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
     <div>
         <div class='container'>
             <input type = 'text' class = 'input-list' placeholder = 'What do you want to do?'>
-            <button id='submit-todo' type="button">Enter</button>
+            <button id='submit_todo' type="button">Enter</button>
             <div class = 'options'>
-            <div class='home'>Home</div>
-            <div class='search'>Search</div>
-            <div class='logout'>Logout</div>
+            <div class='item1'>Item 1</div>
+            <div class='item2'>Item 2</div>
+            <div class='item3'>Item 3</div>
+            <div class='item4'>Item 4</div>
+            <div class='item5'>Item 5</div>
         </div>
         </div>
 
