--- a/index.html
+++ b/index.html
@@ -1,35 +1,38 @@
 <!DOCTYPE html>
 <html>
-
-<head>
+  <head>
     <title>
-        TODO List App
+      TODO List App
     </title>
-    <link href='style.css' rel='stylesheet'>
-</head>
+    <link href="style.css" rel="stylesheet" />
+  </head>
 
-<body>
-
+  <body>
     <h1>Your Trusty TODO List</h1>
-    
+
     <div>
-        <div class='container'>
-            <input type = 'text' class = 'input-list' placeholder = 'What do you want to do?'>
-            <button id='submit_todo' type="button">Enter</button>
-            <div class = 'options'>
-            <div class='item1'>Item 1</div>
-            <div class='item2'>Item 2</div>
-            <div class='item3'>Item 3</div>
-            <div class='item4'>Item 4</div>
-            <div class='item5'>Item 5</div>
-        </div>
-        </div>
+      <div class="container">
+        <input
+          type="text"
+          class="inputTask"
+          placeholder="What do you want to do?"
+        />
+        <button id="submit_todo" type="button">Enter</button>
+        <ul id = 'options' class="options">
+          <li class="item1">Item 1</li>
+          <li class="item2">Item 2</li>
+          <li class="item3">Item 3</li>
+          <li class="item4">Item 4</li>
+          <li class="item5">Item 5</li>
+        </ul>
+      </div>
+    </div>
 
-
-
-<script src = 'index.js'></script>
-</body>
-<footer>
-</footer>
-
+    <script src="index.js"></script>
+  </body>
+  <footer></footer>
 </html>
+
+
+let options = document.querySelector('#options');
+let tasks = input-list
