--- a/index.html
+++ b/index.html
@@ -35,4 +35,8 @@
 
 
 let options = document.querySelector('#options');
-let tasks = input-list
+let tasks = inputTask;
+let nodes = tasks.map(task => {
+    let li = document.createElement('li');
+    li. 
+})
