--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
 
   <body>
-    <h1>Your Trusty TODO List</h1>
+    <h1>Your Trusty To Do List</h1>
 
     <div>
       <div class="container">
