--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
     <div>
       <div class="container">
         <input
+          id ='textInput'
           type="text"
           class="inputTask"
           placeholder="What do you want to do?"
         />
-        <button id="submit_todo" type="button">Enter</button>
+        <br>
+        <button onClick='fn1()' id="submit_todo" type="button">Enter</button>
         <ul id = 'options' class="options">
           <li class="item1">Item 1</li>
           <li class="item2">Item 2</li>
