--- a/index.html
+++ b/index.html
@@ -1,38 +1,25 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>
-      TODO List App
-    </title>
-    <link href="style.css" rel="stylesheet" />
-  </head>
-
-  <body>
-    <h1>Your Trusty To Do List</h1>
-
-    <div>
-      <div class="container">
-        <form>
-          <input
-            id="textInput"
-            type="text"
-            class="inputTask"
-            placeholder="What do you want to do?"
-          />
-        </form>
-        <br />
-        <button id="submit_todo" type="button">Enter</button>
-        <ul id="tasks" class="tasks">
-          <!-- <li class="item1">Item 1</li>
-          <li class="item2">Item 2</li>
-          <li class="item3">Item 3</li>
-          <li class="item4">Item 4</li>
-          <li class="item5">Item 5</li> -->
-        </ul>
-      </div>
-    </div>
-
-    <script src="index.js"></script>
-  </body>
-  <footer></footer>
+<head>
+<title> Rock, Paper, Scissor </title>
+<link rel='stylesheet' href='styles.css'>
+</head>
+<body>
+<h1>Rock, Paper, Scissors</h1>
+<img id= 'game' src="images/game.png" alt="rock paper scissors">
+<container>
+<img id= 'rock' src="images/rock.png" alt="rock">
+<img id= 'paper' src='images/paper.png' alt='paper'>
+<img id= 'scissor' src='images/scissor.png' alt='scissor'>
+</container>
+<br>
+<br>
+<div>
+<h2>Computer chooses:</h2>
+<h2>You picked: </h2>
+<h2 id='results'> Results </h2>
+<h2>Score:</h2>
+</div>
+</body>
+<script src='main.js'></script>
 </html>
